fixed nav img size on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,9 @@ aside {
 }
 
 @media only screen and (max-width: 750px) {
+  nav img {
+    max-width: 50%;
+  }
   nav ul {
     display: none;
   }
